Mobile overflow fixed.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-  padding:50px;
+  padding:50px 0;
   display: flex;
   flex-direction: column;
   background-color: #0000001c;
@@ -119,6 +119,8 @@
 
 .disclaimer {
   margin:10px;
+  text-align: center;
+  font-size: 12px;
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
   color: #ec3434;
